Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
Description
reactos-bootcd-0.4.16-dev-799-g1786a68-x86-gcc-lin-dbg
- Following fix of
CORE-19786 - In Event viewer, click on "Application log"
- An item gets displayed in the lower part, scroll buttons are enabled
- Change to "Security log" (no items)
Scroll buttons gets disabled but content remains displayed, while not from the opened log
Expected behavior: others fields to be reset or 1 item of the log to be loaded


Attachments
Issue Links
- blocks
-
CORE-20023 Event Viewer (eventvwr) meta bug
-
- Reopened
-
- is blocked by
-
CORE-19786 Event Viewer: "show next" shows garbage (and Exception Dialog logged)
-
- Resolved
-